--- a/note.html
+++ b/note.html
@@ -373,3 +373,26 @@
         </tbody>
     </table>
 </div>
+
+<div class="alert alert-danger" role="alert">
+    Lorem ipsum dolor sit amet.
+</div>
+
+<div class="alert alert-danger" role="alert">
+    Lorem ipsum dolor sit amet.
+    <button class="close" type="button" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+    </button>
+</div>
+
+<p>Lorem ipsum dolor sit amet. <span class="badge badge-danger">new</span></p>
+
+
+<button class="btn btn-primary" type="button">
+    Button <span class="badge badge-light">4</span>
+</button>
+
+
+<button class="btn btn-primary" type="button">
+     Button <span class="badge badge-pill badge-light">4</span>
+</button>
