--- a/note.html
+++ b/note.html
@@ -396,3 +396,91 @@
 <button class="btn btn-primary" type="button">
      Button <span class="badge badge-pill badge-light">4</span>
 </button>
+
+<button class="btn btn-primary" type="button">Lorem ipsum dolor sit amet.</button>
+<button class="btn btn-outline-danger" type="button">Button</button>
+<button class="btn btn-outline-danger btn-lg" type="button">Button</button>
+<button class="btn btn-danger btn-block" type="button">Button</button>
+<button class="btn btn-danger" type="button" disabled>Button</button>
+
+<div class="btn-group" role="group" aria-label="Example">
+    <button class="btn btn-danger" type="button">Button</button>
+    <button class="btn btn-danger" type="button">Button</button>
+    <button class="btn btn-danger" type="button">Button</button>
+</div>
+
+<div class="btn-group" role="group" aria-label="Example">
+    <button class="btn btn-secondary dropdown-toggle" id="btnGroupDrop1" data-toggle='dropdown' aria-haspopup="true" aria-expanded='false'>Dropdown</button>
+    <div class="dropdown-menu" arial-labelledby="btnGroupDrop1">
+        <a href="#" class="dropdown-item">Dropdown link</a>
+        <a href="#" class="dropdown-item">Dropdown link</a>
+    </div>
+</div>
+
+<a href="#" class="btn btn-success" role="button">Href</a>
+
+<div class="card">
+    <div class="card-body">
+        Lorem ipsum dolor sit amet.
+    </div>
+</div>
+
+<div class="card" style="width:16rem;">
+    <div class="card-body">
+        Lorem ipsum dolor sit amet.
+    </div>
+</div>
+
+<div class="card" style="width:16rem;">
+    <div class="card-body">
+        <h5 class="card-title">Header h5</h5>
+        <h6 class="card-subtitle">Header h6</h6>
+        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod recusandae reiciendis quae aspernatur laboriosam doloremque quidem laborum? Magni animi incidunt, ratione adipisci consequatur doloremque aliquid.</p>
+        <a href="#" class="card-link">Link</a>
+        <a href="#" class="card-link">Link</a>
+    </div>
+</div>
+
+<div class="card" style="width:16rem;">
+    <img src="https://hunyadi.info.hu/levente/images/stories/boxplus/image3.jpg" alt="Example" class="card-img-top">
+    <div class="card-body">
+        <h5 class="card-title">Header h5</h5>
+        <h6 class="card-subtitle">Header h6</h6>
+        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod recusandae reiciendis quae aspernatur laboriosam doloremque quidem laborum? Magni animi incidunt, ratione adipisci consequatur doloremque aliquid.</p>
+        <a href="#" class="card-link">Link</a>
+        <a href="#" class="card-link">Link</a>
+    </div>
+</div>
+
+
+<div class="card" style="width:16rem;">
+    <img src="https://hunyadi.info.hu/levente/images/stories/boxplus/image3.jpg" alt="Example" class="card-img-top">
+    <div class="card-body">
+        <h5 class="card-title">Header h5</h5>
+        <h6 class="card-subtitle">Header h6</h6>
+        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod recusandae reiciendis quae aspernatur laboriosam doloremque quidem laborum? Magni animi incidunt, ratione adipisci consequatur doloremque aliquid.</p>
+    </div>
+    <button class="btn btn-danger">Button</button>
+</div>
+
+<div class="mb-3">Margin-botton</div>
+
+<div class="card border-success" style="width:16rem;">
+    <div class="card-header">Header</div>
+    <div class="card-body">
+        <h5 class="card-title">Header h5</h5>
+        <h6 class="card-subtitle">Header h6</h6>
+        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod recusandae reiciendis quae aspernatur laboriosam doloremque quidem laborum? Magni animi incidunt, ratione adipisci consequatur doloremque aliquid.</p>
+    </div>
+    <div class="card-footer">Footer</div>
+</div>
+
+<div class="card border-success" style="width:16rem;">
+    <div class="card-header bg-transparent border-success">Header</div>
+    <div class="card-body">
+        <h5 class="card-title">Header h5</h5>
+        <h6 class="card-subtitle">Header h6</h6>
+        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod recusandae reiciendis quae aspernatur laboriosam doloremque quidem laborum? Magni animi incidunt, ratione adipisci consequatur doloremque aliquid.</p>
+    </div>
+    <div class="card-footer bg-transparent border-success">Footer</div>
+</div>
