--- a/note.html
+++ b/note.html
@@ -484,3 +484,53 @@
     </div>
     <div class="card-footer bg-transparent border-success">Footer</div>
 </div>
+
+
+<div id="mySlider" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="https://glavcom.ua/img/gallery/3196/7/117949_main.jpg" alt="" class="d-block w-100">
+        </div>
+        <div class="carousel-item">
+            <img src="https://img-fotki.yandex.ru/get/15505/231161525.8/0_11be4a_ab8a6f81_XL.jpg" alt="" class="d-block w-100">
+        </div>
+        <div class="carousel-item">
+            <img src="https://img-fotki.yandex.ru/get/52790/50021227.384/0_de1a3_de463c69_XL.jpg" alt="" class="d-block w-100">
+        </div>
+    </div>
+    <a href="#mySlider" class="carousel-control-prev" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Example</span>
+    </a>
+    <a href="#mySlider" class="carousel-control-next" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Example</span>
+    </a>
+</div>
+
+<div id="mySlider" class="carousel slide" data-ride="carousel">
+    <ul class="carousel-indicators">
+        <li data-target="#mySlider" data-slide-to="0" class="active"></li>
+        <li data-target="#mySlider" data-slide-to="1"></li>
+        <li data-target="#mySlider" data-slide-to="2"></li>
+    </ul>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="https://glavcom.ua/img/gallery/3196/7/117949_main.jpg" alt="" class="d-block w-100">
+        </div>
+        <div class="carousel-item">
+            <img src="https://img-fotki.yandex.ru/get/15505/231161525.8/0_11be4a_ab8a6f81_XL.jpg" alt="" class="d-block w-100">
+        </div>
+        <div class="carousel-item">
+            <img src="https://img-fotki.yandex.ru/get/52790/50021227.384/0_de1a3_de463c69_XL.jpg" alt="" class="d-block w-100">
+        </div>
+    </div>
+    <a href="#mySlider" class="carousel-control-prev" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Example</span>
+    </a>
+    <a href="#mySlider" class="carousel-control-next" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Example</span>
+    </a>
+</div>
